# open-metaverse-id

./: 1.create-root-identity.puml  Makefile  README.md
contracts/: Cryptography.proto  IntermediateCertificate.proto  IntermediateDocument.proto  IntermediateIdentity.proto  Omid.proto  OpenMetaIdVersion.proto  RootCertificate.proto  RootDocument.proto  RootIdentity.proto
node-wrapper/: package.json
node-wrapper/src/: index.ts  open-meta-id.ts
node_examples/: package.json
node_examples/examples/: create-root-certificate.js
rust-dylib/: Cargo.toml
rust-dylib/src/: lib.rs  protobuf.rs
rust-lib/: Cargo.toml  build.rs
rust-lib/src/: cryptography.rs  lib.rs  omid_version.rs  protobuf.rs  raw_omid_version.rs  root_certificate.rs  root_document.rs
rust-lib/src/cryptography/: asymmetric_crypto_alogrithm.rs  password_metadata.rs  self_signature.rs  signature.rs  signature_alogrithm.rs  symmetric_crypto_alogrithm.rs
sequence_diagrams/examples/: 2.authenticate-with-platform.puml  3.authenticate-with-service-direct.puml  4.authenticate-with-service-via-platform.puml  5.create-intermediate-identity.puml  6.revoke-intermediate-identity.puml
