[package]
name = "open-meta-id-dylib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
libc = "0.2"
open-meta-id = { path = "../rust-lib", version = "0.1.0" }
prost = "0.9.0"

[build-dependencies]
prost-build = { version = "0.6" }
